--- a/content/ch5_1.qmd
+++ b/content/ch5_1.qmd
@@ -2,14 +2,15 @@
 
 ## Vecteurs gaussiens
 
-Un vecteur aléatoire $X$ à valeurs dans $\mathbb{R}^n$ est un vecteur gaussien de loi $N(\mu,\Sigma)$ si sa densité est donnée par $$ \frac{1}{\sqrt{(2\pi)^n \det(\Sigma)}}\exp\left\lbrace - \frac{1}{2}\left\langle x-\mu, \Sigma^{-1}(x-\mu)\right\rangle \right\rbrace.$$
+Un vecteur aléatoire $X$ à valeurs dans $\mathbb{R}^n$ est un vecteur gaussien de loi $N(\mu,\Sigma)$ si sa densité est donnée par $$ \frac{\exp\left\lbrace - \frac{1}{2}\left\langle x-\mu, \Sigma^{-1}(x-\mu)\right\rangle \right\rbrace}{\sqrt{(2\pi)^n \det(\Sigma)}}.$$
 Ici, le vecteur $\mu \in \mathbb{R}^n$ est appelé *moyenne* de $X$ parce que 
 $$\mathbb{E}[X] = \mu. $$
 La matrice $\Sigma$, qui est toujours supposée symétrique et à valeurs propres strictement positives (on dit *définie positive*), est appelée *matrice de covariance*, parce que
 $$\mathbb{E}[(X-\mu)(X-\mu)^\top] = \Sigma. $$
 
-De même que la transformée de Fourier d'une variable gaussienne réelle $N(m, \sigma^2)$ est égale à $e^{imt - \frac{t^2\sigma^2}{2}}$, la transformée de Fourier d'un vecteur gaussien $N(\mu,\Sigma)$ est 
-$$\mathbb{E}[e^{i\langle t, X\rangle}] = \exp\left\lbrace i\langle t, \mu\rangle - \frac{\langle(t-\mu), \Sigma (t-\mu) \rangle}{2} \right\rbrace. $$
+De même que la transformée de Fourier d'une variable gaussienne réelle $N(m, \sigma^2)$ est égale à $e^{imt - \frac{t^2\sigma^2}{2}}$, la transformée de Fourier $\mathbb{E}[e^{i\langle t, X\rangle}]$ d'un vecteur gaussien $N(\mu,\Sigma)$ est égale à
+$$\exp\left\lbrace i\langle t, \mu\rangle - \frac{\langle(t-\mu), \Sigma (t-\mu) \rangle}{2} \right\rbrace. $${#eq-tf-gaussienne}
+Le théorème suivant synthétise toutes les propriétés de stabilité des lois gaussiennes. 
 
 :::{#thm-vecgauss}
 
@@ -19,6 +20,17 @@ $$MX \sim N(M\mu, M\Sigma M^\top). $$
 
 2.
 Si le couple $(X,Y)$ forme un vecteur gaussien, alors $X$ et $Y$ sont indépendants si et seulement si leur covariance $\mathbb{E}[(X-\mathbb{E}[X])(Y-\mathbb{E}[Y])^\top]$ est la matrice nulle.
+
+:::
+
+:::{.proof}
+
+La transformée de Fourier de $MX$ est $\mathbb{E}[\exp(i\langle t, MX\rangle)]$, ce qui vaut également $\mathbb{E}[\exp(i\langle M^\top t, X\rangle)]$. En appliquant la formule @eq-tf-gaussienne, puis en remettant le $M^\top$ à droite des produits scalaires et en réarrangeant les termes, on obtient
+ $$\exp\left\lbrace i\langle t, M\mu\rangle - \frac{\langle(t-\mu), M\Sigma M^\top (t-\mu) \rangle}{2} \right\rbrace. $$
+ C'est bien la transformée de Fourier de $N(M\mu, M\Sigma M^\top)$. 
+
+ Pour le second point, il suffit de vérifier que la transformée de Fourier $\mathbb{E}[e^{i\langle t, X+Y\rangle}]$ est égale à $\mathbb{E}[e^{i\langle t, X\rangle}]\mathbb{E}[e^{i\langle t, Y\rangle}]$. C'est un simple calcul découlant de @eq-tf-gaussienne. 
+
 
 :::
 
@@ -35,8 +47,9 @@ où , par symétrie, $\Sigma_{2,1} = \Sigma_{1,2}^\top$.
 La loi de $X$ conditionnellement à $Y$ est une loi gaussienne de moyenne
 $$\mu_1 + \Sigma_{1,2}\Sigma_{2,2}^{-1}(X_2-\mu_2) $$
 et de covariance
-$$ \Sigma_{1,1} - \Sigma_{2,1}\Sigma_{2,2}^{-1}\Sigma_{1,2}.$$
+$$ \Sigma_{1,1} - \Sigma_{2,1}\Sigma_{2,2}^{-1}\Sigma_{1,2}.$${#eq-schur}
 :::
+La formule @eq-schur est appelée *complément de Schur*. Son inverse est égal au bloc inférieur-droit de l'inverse de $\Sigma$. Cette formule permet d'inverser des matrices par blocs. 
 
 L'expression *loi conditionnelle* signifie ici que, pour toute fonction test $\varphi : \mathbb{R}^n \to \mathbb{R}$, l'espérance conditionnelle $\mathbb{E}[\varphi(X)\mid Y]$, qui est une variable aléatoire $Y$-mesurable, vaut
 $$\frac{1}{(2\pi \det(S^{-1}))^{n/2}}\int_{\mathbb{R}^n} \varphi(x) e^{-\frac{\langle X-1 - (\mu_1 + \Sigma_{1,2}\Sigma_{2,2}^{-1}(X_2-\mu_2)) S^{-1}(X_1 - (\mu_1 + \Sigma_{1,2}\Sigma_{2,2}^{-1}(X_2-\mu_2)))\rangle}{2}}dx $$
@@ -45,6 +58,7 @@ où $S = \Sigma_{1,1} - \Sigma_{2,1}\Sigma_{2,2}^{-1}\Sigma_{1,2}$.
 
 ## Théorème de Cochran
 
+Le fait que dans un modèle gaussien, la quantité $(\bar{X}_n - \mu) / \hat{\sigma}_n$ suive une loi de Student, ou que dans le modèle linéaire gaussien, les résidus sont indépendants de l'estimateur des moindres carrés, sont tous les deux des applications du théorème de Cochran. 
 
 :::{#thm-cochran}
 
@@ -59,8 +73,9 @@ $$ |\pi_j(X)|^2 \sim \chi_2(\dim E_j).$$
 :::{.proof}
 
 
-Pour chaque $E_i$, notons $d_i$ sa dimension et choisissons-lui une base orthonormale $e^i_1, \dotsc, e^i_{d_i}$. La projection orthogonale de $X$ sur $E_i$ est $\pi_i(X)= \sum_{t=1}^{d_i} \langle X, e^i_t\rangle e^i_t$. Notons $X^i_t=\langle X, e^i_t\rangle$. Le vecteur $(X^i_t)$ (avec $i=1, \dotsc, k$ et $t = 1, \dotsc, d_i$), qui contient bien $d_1+\dotsb+d_k=n$ éléments, est une fonction linéaire du vecteur gaussien centré $X$, donc est lui-même un vecteur gaussien centré. Calculons sa covariance : de façon générale, si $e,f$ sont deux vecteurs fixés, 
-$$\mathbb{E}[\langle X, e\rangle \langle X, f\rangle] = \sum_{i,j}e_if_j \mathrm{Cov}(X_i, X_j) = \langle e, f\rangle.$$
+Pour chaque $E_i$, notons $d_i$ sa dimension et choisissons-lui une base orthonormale $e^i_1, \dotsc, e^i_{d_i}$. La projection orthogonale de $X$ sur $E_i$ est $\pi_i(X)= \sum_{t=1}^{d_i} \langle X, e^i_t\rangle e^i_t$. Notons $X^i_t=\langle X, e^i_t\rangle$. Le vecteur $(X^i_t)$ (avec $i=1, \dotsc, k$ et $t = 1, \dotsc, d_i$), qui contient bien $d_1+\dotsb+d_k=n$ éléments, est une fonction linéaire du vecteur gaussien centré $X$, donc est lui-même un vecteur gaussien centré. Calculons sa covariance : de façon générale, si $e,f$ sont deux vecteurs fixés, $\mathbb{E}[\langle X, e\rangle \langle X, f\rangle]$ se développe en
+$$\sum_{i,j}e_if_j \mathrm{Cov}(X_i, X_j)$$
+et comme les $X_i$ sont iid, cela vaut $\langle e, f\rangle$. 
 Il est alors immédiat que la matrice de covariance du vecteur gaussien $(X^i_t)$ n'est autre que la matrice $(\langle e^i_t, e^j_s \rangle)$, c'est-à-dire l'identité puisque les $(e^i_t)$ forment une base orthonormale de $\mathbb{R}^n$. Il en résulte les deux points de l'énoncé.
 
 1. Les $\pi_i(X)$ sont des variables indépendantes, puisque fonctions linéaires de variables indépendantes entre elles. 
@@ -73,15 +88,14 @@ ce qui est bien une somme de $d_i$ gaussiennes $N(0,1)$ indépendantes, donc une
 
 ## Loi de Fisher {#sec-fisher}
 
-Si $N$ est un vecteur et $X,Y$ sont les projections de $N$ sur deux sous-espaces vectoriels orthogonaux, le théorème de Cochran dit que $X$ et $Y$ sont des lois du $\chi_2$ indépendantes de paramètres $p=\dim  E, q = \dim F$. La loi de leur rapport $X/Y$ est connue et fréquemment utilisée en statistiques. 
-
+Si $N$ est un vecteur et $X,Y$ sont les projections de $N$ sur deux sous-espaces vectoriels orthogonaux, le théorème de Cochran dit que $X$ et $Y$ sont des lois du $\chi_2$ indépendantes de paramètres $p=\dim  E, q = \dim F$. La loi de leur rapport $X/Y$ apparaît souvent dans des problèmes de statistiques. 
 
 :::{#thm-fisher}
 
-Soient $X,Y$ deux variables aléatoires indépendantes, de lois respectives $\chi_2(p)$ et $\chi_2(q)$. La loi du rapport $(X/p)/(Y/q)$ s'appelle loi de Fisher de paramètres $p,q$, et on la note $\mathscr{F}_{p,q}$. Sa densité est donnée par 
-$$ f_{p,q}(x) = \frac{\mathbf{1}_{x>0}}{Z_{p,q}}\frac{\left(\frac{px}{px + q}\right)^{\frac{p}{2}} \left(1 - \frac{px}{px + q}\right)^{\frac{q}{2}}}{x}$${#eq-fisherdensity}
+Soient $X,Y$ deux variables aléatoires indépendantes, de lois respectives $\chi_2(p)$ et $\chi_2(q)$. La loi du rapport $(X/p)/(Y/q)$ s'appelle loi de Fisher de paramètres $p,q$, et on la note $\mathscr{F}_{p,q}$. Sa densité $f_{p,q}(x)$ sur $[0,\infty[$ est donnée par 
+$$ \frac{1}{Z_{p,q}}\frac{\left(\frac{px}{px + q}\right)^{\frac{p}{2}} \left(1 - \frac{px}{px + q}\right)^{\frac{q}{2}}}{x}$${#eq-fisherdensity}
 où la constante $Z_{p,q}$ est $B(p/2, q/2)$, c'est-à-dire
-$$ Z_{p,q} =  \int_0^1 u^{\frac{p}{2}-1}(1-u)^{\frac{q}{2}-1}du.$$
+$$ \int_0^1 u^{\frac{p}{2}-1}(1-u)^{\frac{q}{2}-1}du.$$
 :::
 
 Le calcul est facile, puisque les lois du $\chi_2$ ont une densité connue donnée par @eq-chideuxdensity. Soit $\varphi$ une fonction test et soit $F = (X/p)/(Y/q)$. Alors, $\mathbb{E}[\varphi(F)]$ vaut
